# woodchopper

./: .editorconfig  .gitignore  README.md  makefile  pyproject.toml
.github/workflows/: python-package.yml
src/woodchopper/: __init__.py
src/woodchopper.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_woodchopper.py
