[tool.poetry]
name = "woodchopper"
version = "1.1.0"
description = "A lightweight logging package"
authors = ["AfterNoon PM <h2o.Drop2010+pypi@gmail.com>"]
license = "LGPL-3.0-only"

[tool.poetry.dependencies]
python = "^3.10"
rich = "^12.5.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
