[tool.poetry]
name = "woodchopper"
version = "2.0.4"
description = "A lightweight logging package"
authors = ["AfterNoon PM <h2o.Drop2010+woodchopper@gmail.com>"]
license = "LGPL-3.0-only"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
rich = "^13.3.2"
spacename = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.2,<9.0.0"
build = ">=0.10,<1.3"
twine = ">=4.0.2,<6.0.0"
wheel = ">=0.40,<0.44"
flake8 = ">=6,<8"
tomli = {version=">=2.0.1", markers="python_version < '3.11'"}
docutils = "!=0.21"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
